--- a/core/src/androidTest/AndroidManifest.xml
+++ b/core/src/androidTest/AndroidManifest.xml
@@ -24,21 +24,15 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.segment.analytics.test"
-    android:versionCode="1"
-    android:versionName="1.0">
+    package="com.segment.analytics.test">
 
-  <uses-sdk android:minSdkVersion="8"/>
+  <application>
+    <uses-library android:name="android.test.InstrumentationTestRunner"/>
+  </application>
 
   <instrumentation
       android:name="android.test.InstrumentationTestRunner"
-      android:targetPackage="com.segment.analytics.test"/>
-
-  <application
-      android:icon="@drawable/ic_launcher"
-      android:label="@string/app_name">
-    <uses-library android:name="android.test.runner"/>
-  </application>
+      android:targetPackage="com.segment.analytics"/>
 
   <!--  For All Providers -->
   <uses-permission android:name="android.permission.INTERNET"/>
