--- a/sample-app/src/main/AndroidManifest.xml
+++ b/sample-app/src/main/AndroidManifest.xml
@@ -58,7 +58,7 @@
     </activity>
 
     <service
-        android:name="com.segment.analytics.WearDispatcher$PhoneAnalyticsListenerService">
+        android:name="com.segment.analytics.PhoneAnalyticsListenerService">
       <intent-filter>
         <action android:name="com.google.android.gms.wearable.BIND_LISTENER"/>
       </intent-filter>
