--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 GROUP=com.segment.analytics.android
 
 VERSION_CODE=200
-VERSION_NAME=2.0.0-SNAPSHOT
+VERSION_NAME=2.0.0
 
 POM_NAME=Segment.io for Android
 POM_DESCRIPTION=The hassle-free way to add analytics to your Android app.
