--- a/analytics-core/build.gradle
+++ b/analytics-core/build.gradle
@@ -28,7 +28,7 @@ dependencies {
 }
 
 apply from: rootProject.file('gradle/checkstyle-library.gradle')
-apply from: rootProject.file('gradle/attach-lean-jar.gradle')
+apply from: rootProject.file('gradle/attach-jar.gradle')
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
 apply from: rootProject.file('gradle/attach-test-jar.gradle')
 
