--- a/analytics-integrations/analytics-integration-google-analytics/build.gradle
+++ b/analytics-integrations/analytics-integration-google-analytics/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 }
 
 apply from: rootProject.file('gradle/checkstyle-library.gradle')
-apply from: rootProject.file('gradle/attach-lean-jar.gradle')
+apply from: rootProject.file('gradle/attach-jar.gradle')
 apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
 
 // todo: move this to the gradle-mvn-push script
