--- a/analytics/build.gradle
+++ b/analytics/build.gradle
@@ -5,6 +5,8 @@ apply plugin: 'com.f2prateek.javafmt'
 apply from: rootProject.file('gradle/android.gradle')
 
 dependencies {
+  compile 'com.android.support:support-annotations:25.2.0'
+
   testCompile 'junit:junit:4.12'
   testCompile('org.robolectric:robolectric:3.1.4') {
     exclude group: 'commons-logging', module: 'commons-logging'
