--- a/build.gradle
+++ b/build.gradle
@@ -46,3 +46,7 @@ ext {
 
   preDexLibraries = preDexEnabled && !isCI
 }
+
+ext.deps = [
+  supportAnnotations: 'com.android.support:support-annotations:23.0.1'
+]
