--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     classpath 'com.android.tools.build:gradle:2.3.0'
     classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.5.0'
     classpath 'com.f2prateek.javafmt:javafmt:0.1.2'
+    classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.6.2'
   }
 }
 
