--- a/gradle/gradle-mvn-push.gradle
+++ b/gradle/gradle-mvn-push.gradle
@@ -140,6 +140,12 @@ afterEvaluate { project ->
       classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
     }
 
+    afterEvaluate {
+      javadoc.classpath += files(android.libraryVariants.collect { variant ->
+        variant.javaCompile.classpath.files
+      })
+    }
+
     task androidJavadocsJar(type: Jar, dependsOn: androidJavadocs) {
       classifier = 'javadoc'
       from androidJavadocs.destinationDir
