--- a/analytics-wear/build.gradle
+++ b/analytics-wear/build.gradle
@@ -6,6 +6,8 @@ apply from: rootProject.file('gradle/android.gradle')
 dependencies {
   compile project(':analytics')
 
+  // TODO: we should update this dependency.
+  //noinspection GradleDependency
   compile 'com.google.android.gms:play-services-wearable:10.2.6'
 }
 
