Use new dependency configurations.
Ref: https://segment.atlassian.net/browse/LIB-190

As moted in LIB-90, this fixes warnings like:

```
Configuration 'compile' in project ':analytics' is deprecated. Use 'implementation' instead.
Configuration 'testCompile' in project ':analytics' is deprecated. Use 'testImplementation' instead.
The ConfigurableReport.setDestination(Object) method has been deprecated and is scheduled to be removed in Gradle 5.0. Please use the method ConfigurableReport.setDestination(File) instead.
```

General rule here was:

* testCompile -> testImplementation since tests are not exported
* compile -> api in library since they are exported
* compile -> implementation in apps since they are not exported

--- a/analytics-samples/analytics-sample/build.gradle
+++ b/analytics-samples/analytics-sample/build.gradle
@@ -11,10 +11,10 @@ android {
 }
 
 dependencies {
-  compile project(':analytics')
-  compile project(':analytics-wear')
+  implementation project(':analytics')
+  implementation project(':analytics-wear')
 
-  compile 'com.jakewharton:butterknife:8.6.0'
+  implementation 'uk.co.chrisjenx:calligraphy:2.2.0'
+  implementation 'com.jakewharton:butterknife:8.6.0'
   annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
-  compile 'uk.co.chrisjenx:calligraphy:2.2.0'
 }
