--- a/analytics-tests/build.gradle
+++ b/analytics-tests/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.f2prateek.javafmt'
 apply from: rootProject.file('gradle/android.gradle')
 
 dependencies {
-  compile project(':analytics')
+  api project(':analytics')
 }
 
 apply from: rootProject.file('gradle/attach-jar.gradle')
