--- a/analytics/build.gradle
+++ b/analytics/build.gradle
@@ -6,19 +6,19 @@ apply plugin: 'com.getkeepsafe.dexcount'
 apply from: rootProject.file('gradle/android.gradle')
 
 dependencies {
-  compile rootProject.ext.deps.supportAnnotations
+  api rootProject.ext.deps.supportAnnotations
 
-  testCompile 'junit:junit:4.12'
-  testCompile('org.robolectric:robolectric:3.5') {
+  testImplementation 'junit:junit:4.12'
+  testImplementation('org.robolectric:robolectric:3.5') {
     exclude group: 'commons-logging', module: 'commons-logging'
     exclude group: 'org.apache.httpcomponents', module: 'httpclient'
   }
-  testCompile 'org.assertj:assertj-core:1.7.1'
-  testCompile 'com.squareup.assertj:assertj-android:1.1.1'
-  testCompile 'org.mockito:mockito-core:1.10.19'
-  testCompile 'com.squareup.okio:okio:1.10.0'
-  testCompile 'com.squareup.okhttp:mockwebserver:2.3.0'
-  testCompile 'com.squareup.burst:burst-junit4:1.1.1'
+  testImplementation 'org.assertj:assertj-core:1.7.1'
+  testImplementation 'com.squareup.assertj:assertj-android:1.1.1'
+  testImplementation 'org.mockito:mockito-core:1.10.19'
+  testImplementation 'com.squareup.okio:okio:1.10.0'
+  testImplementation 'com.squareup.okhttp:mockwebserver:2.3.0'
+  testImplementation 'com.squareup.burst:burst-junit4:1.1.1'
 }
 
 apply from: rootProject.file('gradle/attach-jar.gradle')
