--- a/analytics-samples/analytics-wear-sample/src/main/AndroidManifest.xml
+++ b/analytics-samples/analytics-wear-sample/src/main/AndroidManifest.xml
@@ -21,6 +21,9 @@
 
     <meta-data android:name="com.google.android.gms.version"
         android:value="@integer/google_play_services_version"/>
+    <meta-data
+      android:name="com.google.android.wearable.standalone"
+      android:value="false"/>
 
   </application>
 
