Fix JavaDoc warnings
Previously we'd get a lot of warnings like:

```
  symbol:   class Nullable
  location: class Analytics
/Users/prateek/dev/src/github.com/segmentio/analytics-android/analytics/src/main/java/com/segment/analytics/Analytics.java:604: error: cannot find symbol
      final @NonNull String event,
             ^
  symbol:   class NonNull
  location: class Analytics
/Users/prateek/dev/src/github.com/segmentio/analytics-android/analytics/src/main/java/com/segment/analytics/Analytics.java:605: error: cannot find symbol
      final @Nullable Properties properties,
             ^
  symbol:   class Nullable
  location: class Analytics
/Users/prateek/dev/src/github.com/segmentio/analytics-android/analytics/src/main/java/com/segment/analytics/Analytics.java:606: error: cannot find symbol
      @Nullable final Options options) {
       ^
  symbol:   class Nullable
  location: class Analytics
/Users/prateek/dev/src/github.com/segmentio/analytics-android/analytics/src/main/java/com/segment/analytics/Analytics.java:641: error: cannot find symbol
  public void screen(@Nullable String category, @Nullable String name) {
                      ^
  symbol:   class Nullable
  location: class Analytics
/Users/prateek/dev/src/github.com/segmentio/analytics-android/analytics/src/main/java/com/segment/analytics/Analytics.java:641: error: cannot find symbol
  public void screen(@Nullable String category, @Nullable String name) {
                                                 ^
  symbol:   class Nullable
  location: class Analytics
/Users/prateek/dev/src/github.com/segmentio/analytics-android/analytics/src/main/java/com/segment/analytics/Analytics.java:650: error: cannot find symbol
      @Nullable String category, @Nullable String name, @Nullable Properties properties) {
       ^
  symbol:   class Nullable
  location: class Analytics
/Users/prateek/dev/src/github.com/segmentio/analytics-android/analytics/src/main/java/com/segment/analytics/Analytics.java:650: error: cannot

--- a/gradle/gradle-mvn-push.gradle
+++ b/gradle/gradle-mvn-push.gradle
@@ -216,3 +216,8 @@ afterEvaluate { project ->
     }
   }
 }
+
+// Ref: https://github.com/chrisbanes/gradle-mvn-push/issues/39#issue-42709896
+afterEvaluate {
+  androidJavadocs.classpath += project.android.libraryVariants.toList().first().javaCompile.classpath
+}
