--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,8 +5,8 @@ jobs:
     docker:
       - image: circleci/android:api-27-alpha
     environment:
-      JVM_OPTS: -Xmx3200m
-      CIRCLE_JDK_VERSION: oraclejdk8
+      - JVM_OPTS: -Xmx3200m
+      - CIRCLE_JDK_VERSION: oraclejdk8
     steps:
       - checkout
       - restore_cache:
