--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
     mavenCentral()
     jcenter()
     google()
+    maven { url 'https://plugins.gradle.org/m2/' }
   }
 
   dependencies {
@@ -10,25 +11,23 @@ buildscript {
     classpath 'com.vanniktech:gradle-android-junit-jacoco-plugin:0.5.0'
     classpath 'com.f2prateek.javafmt:javafmt:0.1.6'
     classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.6.2'
+    classpath 'net.ltgt.gradle:gradle-errorprone-plugin:0.0.14'
   }
 }
 
 allprojects {
-  buildscript {
-    repositories {
-      mavenCentral()
-      jcenter()
-      google()
-    }
-  }
-
-  apply plugin: 'idea'
-
   repositories {
     mavenCentral()
     jcenter()
     google()
   }
+
+  tasks.withType(JavaCompile) {
+    options.compilerArgs += ['-Xlint:all', '-Xlint:-processing', '-Werror']
+  }
+
+  apply plugin: 'idea'
+  apply plugin: 'net.ltgt.errorprone'
 
   group = GROUP
   version = VERSION_NAME
